--- a/client/src/components/Home/style.css
+++ b/client/src/components/Home/style.css
@@ -1,19 +1,9 @@
 
-.topnav
+.color
 
 {
 
-    background-color: #333;
+    background-color: #FFFFFF;
     overflow: hidden;
-}
-
-.topnav a
-{
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
 }
 
