--- a/client/src/components/Category/style.css
+++ b/client/src/components/Category/style.css
@@ -1,7 +1,6 @@
-#CategoryPage {
-    width: 100%;
-    height: 100%;
-    padding: 20px;
+#CategoryPage .deal-title {
+    color: #333;
+
 }
 
 #CategoryPage #posts
@@ -12,27 +11,46 @@
 
 #CategoryPage #posts .post
 {
-    flex: 10%;
-    margin: 10px;
+    background-color: white;
+    display: flex;
+    flex-basis: 16%;
+    flex-direction: column;
+    margin: 3px;
     font-family: verdana, serif;
-    font-size: 12px;
-    border: 2px solid #2f6e43;
+    border: 1px solid #bfbfbf;
+    border-bottom: 3px solid #bfbfbf;
+    border-radius: 3px;
     text-align: left;
     cursor: hand;
 }
 
+#CategoryPage #posts .post:first-child {
+    margin-left: 0;
+}
+
 #CategoryPage #posts .post .thumbnail {
-    padding: 20px;
+    flex: 1 1 auto;
+    padding: 10px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
+
+#CategoryPage #posts .post .thumbnail img {
+    max-width: 65%;
+    align-self: center;
 }
 
 #CategoryPage #posts .post .details {
+    flex: 0 1 40px;
     padding: 0 10px 10px 10px;
 }
 
 #CategoryPage #posts .post .details * {
     margin: 0;
     padding: 0;
-    font-size: 18px;
+    font-size: 14px;
+    font-family: verdana, sans-serif;
     display: block;
 }
 
