--- a/client/src/components/Post/style.css
+++ b/client/src/components/Post/style.css
@@ -4,6 +4,7 @@
 
 .column {
     flex: 50%;
+    margin-right: 20px;
 }
 
 #item {
@@ -12,5 +13,6 @@
 
 .divider {
     height: 2px;
+    margin: 10px 0 5px 0;
     background-color: #bababa;
 }
