--- a/client/src/components/Profile/style.css
+++ b/client/src/components/Profile/style.css
@@ -1,11 +1,12 @@
 #profilePic {
   border-radius: 50%;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
 
 #user-profile {
+  padding: 20px;
+  background-color: white;
   width: 100%;
   max-width: 450px;
   margin: 0 auto;
