added persistent user sessions made some buttons on nav bar conditional redid signup and login pages updated styling added link to post page added actual logging in and out

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,9 @@
+body {
+  background-color: #eaeded;
+}
+
 .app {
   padding: 20px 40px;
-  background-color: #eaeded;
   height: 100%;
   width: 100%;
 }
