--- a/client/src/components/Category/style.css
+++ b/client/src/components/Category/style.css
@@ -1,3 +1,6 @@
+#CategoryPage {
+}
+
 #CategoryPage .deal-title {
     color: #333;
 
@@ -5,17 +8,14 @@
 
 #CategoryPage #posts
 {
-    display: flex;
-    flex-wrap: wrap;
+    height: 100%;
 }
 
 #CategoryPage #posts .post
 {
     background-color: white;
     display: flex;
-    flex-basis: 16%;
     flex-direction: column;
-    margin: 3px;
     font-family: verdana, serif;
     border: 1px solid #bfbfbf;
     border-bottom: 3px solid #bfbfbf;
@@ -24,20 +24,26 @@
     cursor: hand;
 }
 
+#CategoryPage #posts .post:hover {
+    border-bottom: 3px solid #347d4d;
+}
+
 #CategoryPage #posts .post:first-child {
     margin-left: 0;
 }
 
 #CategoryPage #posts .post .thumbnail {
-    flex: 1 1 auto;
     padding: 10px;
-    margin: 0 auto;
+    height: 100%;
+    max-height: 250px;
     display: flex;
     justify-content: center;
 }
 
 #CategoryPage #posts .post .thumbnail img {
     max-width: 65%;
+    height: auto;
+    max-height: 100%;
     align-self: center;
 }
 
