Made vote counter it's own component, linked it to backend, created backend routes and controllers for new 'likes' table in db, and changed a bit of styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,6 +23,12 @@ body {
   border-color: #2f693e;
 }
 
+.btn-primary:disabled {
+  background-color: #306e42;
+  border-color: #2f693e;
+  opacity: 1;
+}
+
 .btn.btn-link {
   border: 0;
 }
