Various refactoring, style updates, and feature additions...
Refactored Post page to remove unnecessary function component

Properly linked likes to backend and prevented double liking

Separated popular and recent posts on home page and made recent posts actually in most recent order.

Updated getAllPosts function on backend to utilize a database view I created (all_posts) that gets the total likes for each post and joins it to the rest of the post columns

--- a/client/src/pages/Post/style.css
+++ b/client/src/pages/Post/style.css
@@ -1,5 +1,15 @@
-.flex {
+.product .flex {
     display: flex;
+    align-items: flex-end;
+}
+
+.details {
+    flex-grow: 1;
+    flex-basis: 80%;
+}
+
+#productPhoto {
+    flex-basis: 20%;
 }
 
 .column {
