Added sidebar component, added it to post page, fixed a bug in one of the behavioral tests, and added a post expiration option

--- a/client/src/pages/Profile/style.css
+++ b/client/src/pages/Profile/style.css
@@ -22,9 +22,8 @@
 }
 
 #user-profile hr {
-  margin: 20px auto;
-  width: 50px;
-  border: 1px solid green;
+  width: 300px;
+  border: 1px solid rgba(16, 85, 22, 0.73);
   background-color: transparent;
 }
 
