--- a/client/src/pages/Post/style.css
+++ b/client/src/pages/Post/style.css
@@ -18,7 +18,13 @@
 }
 
 #item {
-    margin-top: 20px;
+    background-color: white;
+    font-family: verdana, serif;
+    border: 1px solid #cbcbcb;
+    border-top: 3px solid green;
+    border-radius: 3px;
+    padding: 20px 20px 20px 20px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1), 0 2px 6px 0 rgba(0, 0, 0, 0.09);
 }
 
 .divider {
