Added expiration date to post page, added rich commenting and rich text for profile bio and post description, added link to profile for comments, and added profile images to comments
Co-authored-by: Bailey Metz <32320395+bametz23@users.noreply.github.com>
Co-authored-by: Blake Pathammavong <22942103+blakepath@users.noreply.github.com>
Co-authored-by: Christopher "Jacob" Miller <32064300+jacmiller@users.noreply.github.com>
Co-authored-by: Justin Morris <15788366+justin-morris@users.noreply.github.com>

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,3 +47,29 @@ span.is-invalid {
   color: #f20000;
 }
 
+.CodeMirror,
+.CodeMirror-scroll {
+  max-height: 300px;
+}
+
+.CodeMirror-fullscreen.CodeMirror {
+  max-height: none;
+}
+
+.CodeMirror-fullscreen .CodeMirror-scroll {
+  max-height: none;
+}
+
+
+blockquote {
+  background: #f9f9f9;
+  border-left: 5px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+
+blockquote p {
+  display: inline;
+}
+
