--- a/client/src/components/Comments/style.css
+++ b/client/src/components/Comments/style.css
@@ -21,6 +21,7 @@
   border-top: 1px solid rgba(51, 51, 51, 0.33);
   /*border-bottom: 1px solid rgba(51, 51, 51, 0.33);*/
   padding: 20px 20px;
+  display: flex;
 }
 
 #commentArea {
@@ -28,7 +29,7 @@
 }
 
 #postCommentBtn {
-  margin: 20px;
+
 }
 
 .commentHeader {
