--- a/client/src/pages/About/style.css
+++ b/client/src/pages/About/style.css
@@ -11,3 +11,12 @@
     padding: 40px;
     text-align:center;
 }
+
+.foundee {
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    alignment: center;
+    box-sizing: border-box;
+    padding-right: 1px;
+}
