--- a/client/src/pages/Tutorial/style.css
+++ b/client/src/pages/Tutorial/style.css
@@ -17,9 +17,9 @@
 }
 .scrnmessage {
     margin: auto;
-    padding: 50px;
+    padding: 50px 0 10px 0;
     text-align: center;
-    font-size: 0.9em;
+    font-size: 1em;
     font-family: verdana, sans-serif, serif;
     text-shadow: 2px 2px 8px #77ee77;
     font-weight: bold;
@@ -27,8 +27,8 @@
 .screenshot{
     margin: auto;
     padding: 10px;
-    width: 500px;
-    height: 250px;
+    width: 50vw;
+    min-width: 200px;
     text-align: center;
     font-size: 1.7em;
     font-family: verdana, sans-serif, serif;
@@ -36,8 +36,8 @@
 }
 .signup{
     margin: auto;
-    width: 300px;
-    height: 250px;
+    width: 30vw;
+    min-width: 200px;
     text-align: center;
 }
 
