added maxLength to all rich text editor instances and fixed a display bug on the editors

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,6 +47,10 @@ span.is-invalid {
   color: #f20000;
 }
 
+.CodeMirror {
+  box-sizing: content-box !important;
+}
+
 .CodeMirror,
 .CodeMirror-scroll {
   max-height: 300px;
