Comments added to Comments component

--- a/client/src/components/Comments/style.css
+++ b/client/src/components/Comments/style.css
@@ -1,6 +1,12 @@
+/*
+    These methods specify the colors and stylistic elements related
+    to the comment area of an item's individual page
+ */
+
 #commentsHeader {
   padding: 20px;
 }
+
 
 .commentList {
   background-color: white;
