Comments added to Post component

--- a/client/src/components/Post/style.css
+++ b/client/src/components/Post/style.css
@@ -1,3 +1,8 @@
+/*
+    These methods specify the colors and stylistic elements related
+    to the area of each individual deal posted on the website.
+ */
+
 .post
 {
   background-color: white;
