Finished commenting about css page

--- a/client/src/pages/About/style.css
+++ b/client/src/pages/About/style.css
@@ -1,3 +1,7 @@
+/*
+    This CSS file specifies the colors and stylistic elements related
+    to the headshot and description of a founder
+ */
 #AboutPage {
     min-height: 100%;
     min-width: 100%;
