Finished commenting the category page index and css files

--- a/client/src/pages/Category/style.css
+++ b/client/src/pages/Category/style.css
@@ -1,3 +1,7 @@
+/*
+    This CSS file specifies the colors and stylistic elements related
+    to the title of the deals displayed on the category page
+ */
 #CategoryPage {
 }
 
