--- a/client/src/pages/EditDeal/style.css
+++ b/client/src/pages/EditDeal/style.css
@@ -1,3 +1,7 @@
+/*
+    This CSS file specifies the colors and stylistic elements related
+    to the deal editing headlines
+ */
 #EditDeal {
     width: 100%;
     height: 100%;
