Finished commenting EditProfile page (css+index)

--- a/client/src/pages/EditProfile/style.css
+++ b/client/src/pages/EditProfile/style.css
@@ -1,3 +1,7 @@
+/*
+    This CSS file specifies the colors and stylistic elements related
+    to the profile editing form
+ */
 #EditProfileForm {
     width: 50%;
     min-width: 200px;
