--- a/client/src/pages/Login/style.css
+++ b/client/src/pages/Login/style.css
@@ -1,3 +1,7 @@
+/*
+    This CSS file specifies the colors and stylistic elements related
+    to the login form
+ */
 #LoginForm {
   width: 50%;
   min-width: 200px;
