Finished commenting NewPost page (css+index)

--- a/client/src/pages/NewPost/style.css
+++ b/client/src/pages/NewPost/style.css
@@ -1,3 +1,7 @@
+/*
+    This CSS file specifies the colors and stylistic elements related
+    to the new post styling
+ */
 #NewPost {
   width: 100%;
   height: 100%;
