Finished commenting profile page (css+index)

--- a/client/src/pages/Profile/style.css
+++ b/client/src/pages/Profile/style.css
@@ -1,3 +1,8 @@
+/*
+    This CSS file specifies the colors and stylistic elements related
+    to the current profile of the user
+ */
+
 #profilePic {
   border-radius: 50%;
   display: block;
