--- a/client/src/pages/Signup/style.css
+++ b/client/src/pages/Signup/style.css
@@ -1,3 +1,7 @@
+/*
+    This CSS file specifies the colors and stylistic elements related
+    to the signup style form
+ */
 #SignupForm {
   width: 50%;
   min-width: 200px;
