Finished commenting on the signup page (css+index).

--- a/client/src/pages/Signup/style.css
+++ b/client/src/pages/Signup/style.css
@@ -1,6 +1,6 @@
 /*
     This CSS file specifies the colors and stylistic elements related
-    to the signup style form
+    to the signup style form...
  */
 #SignupForm {
   width: 50%;
