--- a/client/src/components/Comments/style.css
+++ b/client/src/components/Comments/style.css
@@ -30,6 +30,13 @@
   display: flex;
 }
 
+.comment_left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 #commentArea {
   margin: 20px 20px 0 20px;
 }
@@ -45,7 +52,6 @@
 
 .commentHeaderText {
   font-size: 14px;
-  font-weight: bold;
 }
 
 .commentText img {
